Increased spacing between bottom fo the table and footer and added bottom border to last child on table issue #657

--- a/src/components/Home/EventsTable/style.less
+++ b/src/components/Home/EventsTable/style.less
@@ -45,7 +45,7 @@
   }
   .disclaimer {
     font-style: italic;
-    font-size: .9em;
+    font-size: 0.9em;
   }
   .notes {
     font-style: italic;
@@ -75,6 +75,12 @@
     border-bottom: 0;
     padding: 12px;
   }
+
+  .ant-list-item:last-child {
+    border: 1px solid #e8e8e8;
+    padding: 12px;
+  }
+
   .ant-btn {
     height: 1em;
     padding: 0;
